# GalaxyClock

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  helpers.h  local_time.cpp  local_time.h  main.cpp
